<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textBlack">

    <Button
        android:id="@+id/RegisterConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/signup_custom"
        android:text="SIGN UP"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordReg"
        app:layout_constraintVertical_bias="0.167" />

    <EditText
        android:id="@+id/PasswordReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/round"
        android:ems="10"
        android:hint="🔒  Password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:radius="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailReg"
        android:autofillHints="" />

    <EditText
        android:id="@+id/EmailReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/round"
        android:ems="10"
        android:hint="✉  Email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:radius="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/round"
        android:ems="10"
        android:hint="👤  First Name"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:radius="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImage" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/round"
        android:ems="10"
        android:hint="👤  Last Name"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:radius="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/round"
        android:ems="10"
        android:hint="👤  Username"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:radius="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_photo_library_white_24dp" />

    <Button
        android:id="@+id/AddProfilePicture"
        android:layout_width="273dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:text="@string/click_here_to_add_your_profile_picture"
        android:textColor="#FFFFFF"
        android:background="@color/textBlack"
        app:layout_constraintBottom_toBottomOf="@+id/userImage"
        app:layout_constraintStart_toEndOf="@+id/userImage"
        app:layout_constraintTop_toTopOf="@+id/userImage" />


</androidx.constraintlayout.widget.ConstraintLayout>

