<resources>
    <string name="app_name">Pocketbook</string>
    <string name="title_activity_view_my_book">ViewMyBookActivity</string>
    <string name="view_my_book_tab_1_title">Book</string>
    <string name="profileTab1">Owner</string>
    <string name="profileTab2">Borrower</string>
    <string name="view_my_book_tab_2_title">Requests</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="add_book">Add Book</string>
    <string name="book_cover_image">Book Cover Image</string>
    <string name="scan">Scan</string>
    <string name="profile">Profile</string>
    <string name="isbn_text">ISBN: %1$s</string>
    <string name="added_by_text">Added By: %1$s</string>
    <string name="condition_text">Condition: %1$s</string>
    <string name="comment_text">Comment: %1$s</string>
    <string name="borrowed_book_text">Borrower: %1$s</string>
    <string name="accepted_book_text">Accepted: %1$s</string>
    <string name="requested_book_text">Requester: %1$s</string>
    <string name="owned_book_text">Owner: %1$s</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="splash_screen_logo_text">POCKETBOOK</string>
    <string name="this_is_my_book_title">This is My book Title</string>
    <string name="lengthier_author_name">Lengthier Author Name</string>
    <string name="request">request</string>
    <string name="search_hint">Title, Author or ISBN</string>

    <string name="email_password"><![CDATA[Email & Password]]></string>
    <string name="click_here_to_add_your_profile_picture">Click here to add your profile picture.</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="isbn">ISBN</string>
    <string name="condition">Condition</string>
    <string name="comment">Comment</string>
    <string name="delete">Delete</string>

    <string name="dateFormat">MMM DD,YYYY</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="phoneNumber">Phone Number</string>

    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="change_photo">CHANGE PHOTO</string>
    <string name="discard_changes_title">Discard Changes?</string>
    <string name="discard_changes_content">If you go back now, you will lose your changes.</string>
    <string name="keep_editing">KEEP EDITING</string>
    <string name="discard">DISCARD</string>
    <string name="editBookPageTitle">Edit Book</string>
    <string name="editProfilePageTitle">Edit Profile</string>
    <string name="addBookPageTitle">Add Book</string>
    <string name="signUpPageTitle">Create An Account</string>
    <string name="signUp">Sign Up</string>
    <string name="signOut">Sign Out</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="suggested_books">Suggested Books</string>
    <string name="email">Email</string>

    <string name="name">Name</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>

    <string name="profile_image">profile_Image</string>
    <string name="firstlastname">FirstLastName</string>

    <string name="greatCondition">GREAT</string>
    <string name="goodCondition">GOOD</string>
    <string name="fairCondition">FAIR</string>
    <string name="acceptableCondition">ACCEPTABLE</string>

    <string name="seeBookDescription">See Book Description</string>
    <string name="lendBook">Lend Book</string>
    <string name="borrowBook">Borrow Book</string>
    <string name="returnBook">Return Book</string>
    <string name="receiveBook">Receive Book</string>

    <string name="bookPhotoDialogTitle">Change Photo</string>
    <string name="takePhoto">Take Photo</string>
    <string name="choosePhoto">Choose Photo</string>
    <string name="removePhoto">Remove Current Photo</string>
    <string name="suggest_books">Suggest Books</string>
    <string name="new_profile_username">profile_username</string>
    <string name="new_profile_firstlastname">firstlastname</string>
    <string name="owner">Owner</string>
    <string name="ownedBooks">Owned Books</string>
    <string name="borrower">Borrower</string>
    <string name="addBookFragmentTitle">Add New Book</string>
    <string name="new_to_pocketbook">New to Pocketbook?</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="book_status_image">book_status_image</string>
    <string name="owned_by_you">Owned by You</string>
    <string name="notAvailable">Not Available</string>
    <string name="alreadyRequested">Already Requested!</string>
    <string name="cancelRequest">CANCEL REQUEST</string>
    <string name="cancelAccept">CANCEL ACCEPT</string>
    <string name="viewPickupLocation">View Pickup Location</string>
    <string name="long_description">Long description</string>
    <string name="status">Status</string>
    <string name="book_title_that_is_really_long">Book title that is really long</string>
    <string name="book_author">Book author</string>
    <string name="isbn_123_234_1234">ISBN: 123–234–1234</string>
    <string name="condition_new">Condition: New</string>
    <string name="comment_this_book_is_good">Comment: This book is good!</string>
    <string name="scan_fragment">Scan Fragment</string>
    <string name="profileOwned_username">profile_username</string>
    <string name="pocketbook">Pocketbook</string>
    <string name="set_pickup_location">Set Pickup Location</string>
    <string name="confirmDetails">Confirm Details</string>
    <string name="set_date_and_time">Set Date and Time</string>
    <string name="set_location">Set Location</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="viewLocation">View Location</string>
    <string name="viewDate">View Date</string>
    <string name="viewTime">View Time</string>
    <string name="map_cover">Map Cover</string>

    <string name="viewAll">View All</string>
    <string name="readyForPickup">Ready For Pickup</string>
    <string name="requested">Requested Books</string>
    <string name="borrowed">Borrowed Books</string>
    <string name="owned">Owned Books</string>

    <string name="backbutton">BackButton</string>
    <string name="Notifications">TextView</string>
    <string name="notifications">Notifications</string>
    <string name="notification_description">Notification Description</string>

    <string name="location_pickup">Location Pickup</string>
    <string name="date_of_pickup">Date of Pickup</string>
    <string name="time_of_pickup">Time of Pickup</string>

    <string name="setReturnLocation">Set Return Location</string>
    <string name="viewReturnLocation">View Return Location</string>

    <string name="firstOnBoardingSlideTitle">Welcome to Pocketbook</string>
    <string name="secondOnBoardingSlideTitle">Exchange</string>
    <string name="thirdOnBoardingSlideTitle">Get Started</string>

    <string name="firstOnBoardingSlideDescription">Share the books you love and borrow the books you\'re going to love! </string>
    <string name="secondOnBoardingSlideDescription">When you request to borrow an available book, that book becomes requested.
    After the book owner accepts your request, the book is accepted. Once you and the owner exchange the book, it becomes borrowed.
        And when you return the book, it becomes available!</string>
    <string name="thirdOnBoardingSlideDescription">Add your favorite book to the platform and make someone\'s day!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>