<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/bottom_nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    <item
        android:id="@+id/bottom_nav_add"
        android:icon="@drawable/ic_add"
        android:title="@string/add_book" />

    <item
        android:id="@+id/bottom_nav_scan"
        android:icon="@drawable/ic_scan"
...
